<resources>
    <string name="app_name">Quiz App</string>

    <string name="question1">1. What is Deoxyribonucleic acid commonly referred to as?</string>

    <string name="RNA">RNA</string>
    <string name="CIA">CIA</string>
    <string name="DNA">DNA</string>

    <string name="question2">2. What process involves treating rubber with sulfur to harden it?</string>

    <string name="question3">3. Name two different organelles of a eukaryotic cell.</string>
    <string name="ans3.1">Ribosomes</string>
    <string name="ans3.2">Plasmids</string>
    <string name="ans3.3">Golgi Apparatus</string>
    <string name="ans3.4">Diploid</string>

    <string name="question4">4. This word describes the force that pulls objects to the middle of the earth?</string>
    <string name="question5">5 What type of trees yield the resin used to produce turpentine?</string>
    <string name="ans5.1">Palm trees</string>
    <string name="ans5.2">Pine trees</string>
    <string name="ans5.3">Oak trees</string>
    <string name="question6">6. Cumulus and Cirrus are types of what?</string>
    <string name="question7">7. Which two planets have one or more moons?</string>
    <string name="ans7.1">Ceres</string>
    <string name="ans7.2">Mercury</string>
    <string name="ans7.3">Earth</string>
    <string name="ans7.4">Pluto</string>
    <string name="question8">8. Where in the human body would you find the scaphoid bone?</string>
    <string name="question9">9. Which grow upwards Stalactites or Stalagmites?</string>
    <string name="ans9.1">Stalactites</string>
    <string name="ans9.2">Stalagmites</string>
    <string name="question10">10. What process involves heating an ore to obtain a metal?</string>
    <string name="check_point">Check Point</string>
    <string name="submit">Submit</string>
    <string name="nh_p_th_ng_tin">Nhập thông tin</string>
    <string name="nh_p_h_t_n">Nhập họ tên</string>
    <string name="b_t_u">Bắt đầu</string>
    <string name="thoat">Thoát</string>

</resources>